# dataplane

./: CLAUDE.md  Cargo.toml  default.nix  deny.toml  justfile  plan.md  testroot  vmroot
.config/: nextest.toml
config/: Cargo.toml
config/src/converters/k8s/config/: bgp.rs  device.rs  expose.rs  gateway_config.rs  interface.rs  overlay.rs  peering.rs  tracecfg.rs  underlay.rs  vpc.rs
config/src/converters/k8s/status/: dataplane_status.rs  frr.rs  vpcs.rs
config/src/internal/status/: mod.rs
config/src/utils/: collapse.rs
config/tests/fuzz/: main.rs
dataplane/src/drivers/: dpdk.rs
development/: ideam.md
dpdk-sys/: build.rs
dpdk/src/: dev.rs
dpdk/src/acl/: classify.rs
flow-entry/: Cargo.toml
flow-entry/src/flow_table/: table.rs
flow-entry/tests/fuzz/: main.rs
fuzz-list/: Cargo.toml
fuzz-list-macros/: Cargo.toml
fuzz-list-macros/src/: lib.rs
fuzz-list/src/: harness.rs  lib.rs
hardware/: Cargo.toml
hardware/src/pci/: address.rs
hardware/tests/: dpdk_in_vm.rs
hardware/tests/fuzz/: main.rs
id/: Cargo.toml
id/src/: lib.rs
id/tests/fuzz/: main.rs
interface-manager/: Cargo.toml
interface-manager/src/interface/: mod.rs  properties.rs  tap.rs  vrf.rs  vtep.rs
interface-manager/src/interface/bridge/: mod.rs
interface-manager/tests/fuzz/: main.rs
k8s-intf/: Cargo.toml
k8s-intf/src/bolero/: support.rs
k8s-intf/tests/fuzz/: main.rs
lpm/: Cargo.toml
lpm/src/prefix/: ip.rs  mod.rs
lpm/tests/fuzz/: main.rs
mgmt/src/tests/: mgmt.rs
n-it/: Cargo.toml
n-it/src/: child.rs  error.rs  init.rs  main.rs  mount.rs  signal.rs  utils.rs  vsock_writer.rs
n-vm/: Cargo.toml
n-vm-macros/: Cargo.toml
n-vm-macros/src/: lib.rs
n-vm-macros/tests/: compile_tests.rs
n-vm-macros/tests/compile_fail/: async_fn.rs  async_fn.stderr  e1000_on_cloud_hypervisor.stderr  e1000_on_explicit_cloud_hypervisor.rs  e1000_on_explicit_cloud_hypervisor.stderr  e1000e_on_explicit_cloud_hypervisor.rs  e1000e_on_explicit_cloud_hypervisor.stderr  multiple_backends.stderr  tokio_test_attr.rs  tokio_test_attr.stderr  unknown_nic_model.stderr
n-vm-protocol/: Cargo.toml
n-vm-protocol/src/: lib.rs
n-vm/src/: abort_on_drop.rs  backend.rs  cloud_hypervisor.rs  config.rs  container.rs  dispatch.rs  error.rs  hypervisor.rs  lib.rs  test_identity.rs  vm.rs
n-vm/src/cloud_hypervisor/: error.rs  events.rs  mod.rs
n-vm/src/qemu/: error.rs  mod.rs  qmp.rs
n-vm/tests/: integration.rs
nat/: Cargo.toml
nat/src/icmp_handler/: icmp_error_msg.rs
nat/src/stateless/setup/: range_builder.rs
nat/tests/fuzz/: main.rs
net/: Cargo.toml
net/src/: checksum.rs  lib.rs
net/src/eth/: mac.rs  mod.rs
net/src/flows/: flow_key.rs
net/src/headers/: accessor_macros.rs  builder.rs  embedded.rs  header_stack.rs  mod.rs
net/src/icmp4/: mod.rs
net/src/icmp6/: mod.rs
net/src/interface/: mod.rs  mtu.rs
net/src/ip/: mod.rs
net/src/ipv4/: addr.rs  mod.rs  options.rs
net/src/ipv6/: addr.rs  dest_opts.rs  fragment.rs  hop_by_hop.rs  mod.rs  routing.rs
net/src/pci/: mod.rs
net/src/tcp/: mod.rs  option.rs  options.rs
net/src/udp/: mod.rs
net/src/vlan/: mod.rs
net/src/vxlan/: mod.rs  vni.rs
net/tests/fuzz/: main.rs
nix/: profiles.nix
nix/overlays/: dataplane-dev.nix  dataplane.nix
nix/pkgs/linux/: kernel.config
nix/pkgs/linux/fragments/: base.config  mlx5-sriov.config
npins/: sources.json
scripts/: gen-pins.sh
stats/: Cargo.toml
stats/src/: rate.rs
stats/tests/fuzz/: main.rs
