[package]
name = "dataplane-config"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
default = []
bolero = ["dep:bolero", "dep:fuzz-list"]

[dependencies]
bolero = { workspace = true, optional = true }
fuzz-list = { workspace = true, optional = true }
# internal
common = { workspace = true }
hardware = { workspace = true }
k8s-intf = { workspace = true }
net = { workspace = true }
lpm = { workspace = true }

# external
arc-swap = { workspace = true }
chrono = { workspace = true, features = ["alloc", "std"] }
derive_builder = { workspace = true, features = [] }
ipnet = { workspace = true }
multi_index_map = { workspace = true, features = ["serde"] }
ordermap = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

[target.'cfg(unix)'.dependencies]
linkme = { workspace = true }
tracectl = { workspace = true }

[dev-dependencies]
# internal
fuzz-list = { workspace = true }
pipeline = { workspace = true } # should be removed w/ NAT
lpm = { workspace = true, features = ["testing"] }
hardware = { workspace = true, features = ["bolero"] }
k8s-intf = { workspace = true, features = ["bolero"] }

# external
bolero = { workspace = true, features = ["alloc"] }
caps = { workspace = true }
ipnet = { workspace = true }
pretty_assertions = { workspace = true, features = ["std"] }

[[test]]
name = "fuzz"
path = "tests/fuzz/main.rs"
harness = false
required-features = ["bolero"]
