[package]
name = "dataplane-flow-entry"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
shuttle = ["concurrency/shuttle"]
std = []
testing = []
bolero = ["dep:bolero", "dep:fuzz-list", "net/bolero", "dep:tracing-test"]

[dependencies]
ahash = { workspace = true, features = ["no-rng"] }
bolero = { workspace = true, optional = true }
common = { workspace = true }
concurrency = { workspace = true }
dashmap = { workspace = true, features = ["raw-api"] }
etherparse = { workspace = true }
linkme = { workspace = true }
net = { workspace = true }
pipeline = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tracectl = { workspace = true }
tracing = { workspace = true }
fuzz-list = { workspace = true, optional = true }
tracing-test = { workspace = true, optional = true }

[dev-dependencies]
fuzz-list = { workspace = true }

bolero = { workspace = true, default-features = false }
net = { workspace = true, features = ["bolero"] }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tracing-test = { workspace = true, features = [] }
shuttle = { workspace = true }

[[test]]
name = "fuzz"
path = "tests/fuzz/main.rs"
harness = false
required-features = ["bolero"]
