[package]
name = "dataplane-fuzz-list-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true, default-features = true }
quote = { workspace = true, default-features = true }
syn = { workspace = true, default-features = true, features = ["full"] }
