[package]
name = "dataplane-lpm"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
testing = ["dep:bolero", "dep:fuzz-list", "dep:linkme", "dep:serde_yaml_ng"]
bolero = ["testing"]

[dependencies]
bnum = { workspace = true }
bolero = { workspace = true, optional = true }
ipnet = { workspace = true, features = ["serde"] }
num-traits = { workspace = true }
prefix-trie = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
fuzz-list = { workspace = true, optional = true }
linkme = { workspace = true, optional = true }
serde_yaml_ng = { workspace = true, optional = true }

[dev-dependencies]
bolero = { workspace = true, default-features = false }
fuzz-list = { workspace = true }
serde_yaml_ng = { workspace = true }

[[test]]
name = "fuzz"
path = "tests/fuzz/main.rs"
harness = false
required-features = ["bolero"]
