[package]
name = "dataplane-n-vm-macros"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]

# external
proc-macro2 = { workspace = true, default-features = false, features = [] }
quote = { workspace = true, default-features = false, features = [] }
syn = { workspace = true, default-features = false, features = ["full"] }
