[package]
name = "dataplane-n-vm"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
# internal
n-vm-macros = { workspace = true }
n-vm-protocol = { workspace = true }

# external
capctl = { workspace = true, default-features = false, features = [] }
cloud-hypervisor-client = { workspace = true, default-features = false, features = [] }
command-fds = { workspace = true, default-features = false, features = ["tokio"] }
bollard = { workspace = true, default-features = false, features = ["pipe", "ssl_providerless"] }
nix = { workspace = true, default-features = false, features = ["signal", "user"] }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true, default-features = false, features = ["std"] }
tokio = { workspace = true, default-features = false, features = ["rt", "process", "macros", "fs", "net", "time", "io-util", "io-std"] }
tokio-serde = { workspace = true, default-features = false, features = ["json"] }
tokio-stream = { workspace = true, default-features = false, features = [] }
tokio-util = { workspace = true, default-features = false, features = ["codec"] }
thiserror = { workspace = true, default-features = false, features = [] }
tokio-vsock = { workspace = true, default-features = false, features = [] }
tracing = { workspace = true, default-features = false, features = [] }
tracing-subscriber = { workspace = true, default-features = false, features = ["fmt"] }
