[package]
name = "dataplane-nat"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
shuttle = ["concurrency/shuttle", "dep:shuttle"]
bolero = ["dep:bolero", "dep:fuzz-list", "net/bolero"]

[dependencies]
ahash = { workspace = true }
arc-swap = { workspace = true }
bnum = { workspace = true }
bolero = { workspace = true, optional = true }
common = { workspace = true }
concurrency = { workspace = true, features = [] }
config = { workspace = true }
flow-entry = { workspace = true }
fuzz-list = { workspace = true, optional = true }
indenter = { workspace = true }
left-right = { workspace = true }
linkme = { workspace = true }
lpm = { workspace = true }
net = { workspace = true }
pipeline = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
roaring = { workspace = true }
shuttle = { workspace = true, optional = true }
thiserror = { workspace = true }
tracectl = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# internal
fixin = { workspace = true }
flow-filter = { workspace = true }
fuzz-list = { workspace = true }
test-utils = { workspace = true }
lpm = { workspace = true, features = ["testing"] }
net = { workspace = true, features = ["bolero"] }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tracectl = { workspace = true }

# external
bolero = { workspace = true, default-features = false, features = ["alloc"] }
etherparse = { workspace = true }
shuttle = { workspace = true, features = [] }
tracing-test = { workspace = true, features = [] }

[[test]]
name = "fuzz"
path = "tests/fuzz/main.rs"
harness = false
required-features = ["bolero"]
