[package]
name = "dataplane-stats"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
default = []
bolero = ["dep:bolero", "dep:fuzz-list", "vpcmap/bolero", "net/bolero"]

[dependencies]
# internal
concurrency = { workspace = true }
net = { workspace = true }
pipeline = { workspace = true }
tracectl = { workspace = true }
vpcmap = { workspace = true }

# external
arrayvec = { workspace = true }
bolero = { workspace = true, optional = true }
derive_builder = { workspace = true }
fuzz-list = { workspace = true, optional = true }
hashbrown = { workspace = true, features = ["default-hasher", "inline-more"] }
kanal = { workspace = true, features = ["async"] }
linkme = { workspace = true }
metrics = { workspace = true }
multi_index_map = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
serde = { workspace = true, features = ["derive"] }
small-map = { workspace = true, features = [] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "time", "sync"] }
tracing = { workspace = true, features = ["attributes"] }

[dev-dependencies]
bolero = { workspace = true }
fuzz-list = { workspace = true }
net = { workspace = true, features = ["bolero"] }
vpcmap = { workspace = true, features = ["bolero"] }

[[test]]
name = "fuzz"
path = "tests/fuzz/main.rs"
harness = false
required-features = ["bolero"]
